Add new content to the presentation of the intro class

--- a/lecciones/libraries/frameworks/io2012/css/default.css
+++ b/lecciones/libraries/frameworks/io2012/css/default.css
@@ -41,6 +41,18 @@ redtext {
   color: red; 
 }
 
+bluetext {
+  color: blue; 
+}
+
+greentext {
+  color: green; 
+}
+
+orangetext {
+  color: orange; 
+}
+
 rt {
   color: red; 
 }
